; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_move_16_d_d.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_move_16_d_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@DX = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@CFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_move_16_d_d() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @DY, align 4
  %4 = call i32 @MASK_OUT_ABOVE_16(i32 %3)
  store i32 %4, i32* %1, align 4
  store i32* @DX, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @MASK_OUT_BELOW_16(i32 %6)
  %8 = load i32, i32* %1, align 4
  %9 = or i32 %7, %8
  %10 = load i32*, i32** %2, align 8
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @NFLAG_16(i32 %11)
  store i32 %12, i32* @FLAG_N, align 4
  %13 = load i32, i32* %1, align 4
  store i32 %13, i32* @FLAG_Z, align 4
  %14 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %14, i32* @FLAG_V, align 4
  %15 = load i32, i32* @CFLAG_CLEAR, align 4
  store i32 %15, i32* @FLAG_C, align 4
  ret void
}

declare dso_local i32 @MASK_OUT_ABOVE_16(i32) #1

declare dso_local i32 @MASK_OUT_BELOW_16(i32) #1

declare dso_local i32 @NFLAG_16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
